# ros2_audio_output

./: package.xml  setup.cfg  setup.py
audio_output/: keyboard_input.py  speaker_output.py
config/: soundpaths.yaml
temp_config/: soundpaths.yaml
